@@ -16,6 +16,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class RetailService {
+    public static final String RETAIL_USER_NOT_FOUND = "User is not a retail user";
+    public static final String ADMIN = "admin";
     private final BillRepository billRepository;
     private final UsersRepo userRepository;
     public RetailService(BillRepository billRepository, UsersRepo userRepository) {
@@ -25,9 +27,9 @@ public class RetailService {
     public List<PaymentHistoryDTO> getPaymentHistory(String username) {
         // Fetch the logged-in user
         Users user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("User is not a retail user"));
+                .orElseThrow(() -> new IllegalArgumentException(RETAIL_USER_NOT_FOUND));
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' payment history
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
@@ -39,7 +41,7 @@ public class RetailService {
                             returnPaymentStatus(bill),
                             bill.getTotalAmount()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their payment history
             List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
@@ -52,7 +54,7 @@ public class RetailService {
                             returnPaymentStatus(bill),
                             bill.getTotalAmount()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
     private String returnPaymentStatus(Bill bill) {
@@ -65,9 +67,9 @@ public class RetailService {
     public List<PurchaseHistoryDTO> getPurchaseHistory(String username) {
         // Fetch the logged-in user
         Users user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("User is not a retail user"));
+                .orElseThrow(() -> new IllegalArgumentException(RETAIL_USER_NOT_FOUND));
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' purchase history
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
@@ -78,7 +80,7 @@ public class RetailService {
                                     item.getQuantity(),
                                     item.getQuantity() * item.getUnitPrice()
                             )))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their purchase history
             List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
@@ -90,7 +92,7 @@ public class RetailService {
                                     item.getQuantity(),
                                     item.getQuantity() * item.getUnitPrice()
                             )))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
     // IncompleteTransaction
@@ -98,11 +100,11 @@ public class RetailService {
         // Fetch the logged-in user to check their role
         Optional<Users> retailUser = userRepository.findByUsername(username);
         if (retailUser.isEmpty()) {
-            throw new IllegalArgumentException("User is not a retail user");
+            throw new IllegalArgumentException(RETAIL_USER_NOT_FOUND);
         }
         Users user = retailUser.get();
         // Check if the logged-in user is an admin
-        if ("admin".equalsIgnoreCase(user.getUsername())) {
+        if (ADMIN.equalsIgnoreCase(user.getUsername())) {
             // Admin: Fetch all users' transactions
             List<Bill> allBills = billRepository.findAll();
             return allBills.stream()
@@ -115,7 +117,7 @@ public class RetailService {
                             bill.getBalance(),
                             calculateDueDate(bill.getDate()) // Directly use the date
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // Regular user: Fetch only their transactions
             List<Bill> userBills = billRepository.findByUser(user); // Assuming this method exists
@@ -129,7 +131,7 @@ public class RetailService {
                             bill.getBalance(),
                             calculateDueDate(bill.getDate()) // Directly use the date
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
     private Date calculateDueDate(Date date) {
